examples/errors/15_insufficient_elements/layout.tml
#use <definitions.tmd>

<Window>
    <Text value="First widget"/>
    <Text value="Second widget"/>
</Window>